--- a/NN.ipynb
+++ b/NN.ipynb
@@ -673,13 +673,7 @@
       "11/11 [==============================] - 0s 3ms/step - loss: 0.3762 - accuracy: 0.8098 - val_loss: 0.4053 - val_accuracy: 0.8415\n",
       "Epoch 58/85\n",
       "11/11 [==============================] - 0s 3ms/step - loss: 0.3524 - accuracy: 0.8405 - val_loss: 0.4033 - val_accuracy: 0.8293\n",
-      "Epoch 59/85\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 59/85\n",
       "11/11 [==============================] - 0s 3ms/step - loss: 0.3757 - accuracy: 0.8221 - val_loss: 0.4071 - val_accuracy: 0.8293\n",
       "Epoch 60/85\n",
       "11/11 [==============================] - 0s 3ms/step - loss: 0.3699 - accuracy: 0.8344 - val_loss: 0.4142 - val_accuracy: 0.8293\n",
